Revision history for Perl extension App::Followme

{{$NEXT}}

0.82 2013-09-05T22:16:59Z
    - Added make_relative and absolute_url config option
    
0.81 2013-09-02T22:26:59Z
    - Do not delete leading digits from title if title is all digits
    
0.80 2013-08-29T22:50:14Z
    - Increased sleep times between creating files for tests
    
0.79 2013-08-26T22:16:58Z
    - Removed compile test

0.78 2013-08-17T20:28:34Z
    - Changed begin/end comments to section/endsection
    
0.77 2013-08-17T15:19:16Z
    - fixed time zone depndent test
    - added new blocks to templates

0.76 2013-08-16T22:23:24Z
    - feature complete release