@@ -5,7 +5,7 @@ use warnings;
 
 use IO::File;
 
-our $VERSION = "0.82";
+our $VERSION = "0.83";
 our $modeline;
 
 require Exporter;
