@@ -1,7 +1,8 @@
 Revision history for Perl extension App::Followme
 
 {{$NEXT}}
-
+    - OS independent filename handling
+    
 0.82 2013-09-05T22:16:59Z
     - Added make_relative and absolute_url config option
     
